test_case/rust-lang_rust/49900_380764179_30.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/did_you_mean/issue-39544.rs","byte_start":1290,"byte_end":1298,"line_start":51,"line_end":51,"column_start":13,"column_end":21,"is_primary":true,"text":[{"text":"    let _ = &mut z.x; //~ ERROR cannot borrow","highlight_start":13,"highlight_end":21}],"label":"cannot borrow as mutable","suggested_replacement":null,"expansion":null}],"children":[{"message":"the value which is causing this path not to be mutable is...: `z`","code":null,"level":"note","spans":[],"children":[],"rendered":null}],"rendered":"error[E0596]: cannot borrow immutable item `z.x` as mutable\n  --> /checkout/src/test/ui/did_you_mean/issue-39544.rs:51:13\n   |\nLL |     let _ = &mut z.x; //~ ERROR cannot borrow\n   |             ^^^^^^^^ cannot borrow as mutable\n   |\n   = note: the value which is causing this path not to be mutable is...: `z`\n\n"}
[00:49:37] {"message":"cannot borrow immutable item `w.x` as mutable","code":{"code":"E0596","explanation":"\nThis error occurs because you tried to mutably borrow a non-mutable variable.\n\nExample of erroneous code:\n\n